--- a/quinzena4/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena4/bugfixes/exercicio-bugfixes/index.css
@@ -26,7 +26,7 @@ button:focus {
 }
 
 img {
-    width: 100px;
+    width: 50px;
 }
 
 div>p:first-child {
@@ -34,7 +34,7 @@ div>p:first-child {
 }
 
 div img {
-    background: black;
+    background: white;
 }
 
 .botao-amarelo {
@@ -60,6 +60,7 @@ div img {
 
 .icone {
     height: 15px;
+    width: 20px;
 }
 
 
@@ -104,6 +105,7 @@ table {
     width: 60%;
     position: relative;
     left: 25%;
+    text-align: center;
 }
 
 td button {
