8-Acrescentei um hover e focus para o td button mudar de cor

--- a/quinzena4/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena4/bugfixes/exercicio-bugfixes/index.css
@@ -114,6 +114,15 @@ td button {
     height: 30px;
     border-radius: 5px;
     color: black;
+    
+}
+
+td button:hover {
+    background-color: #cab453;
+}
+
+td button:focus {
+    color: white;
 }
 
 .container-do-search {
