--- a/quinzena4/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena4/bugfixes/exercicio-bugfixes/index.css
@@ -17,6 +17,10 @@ h2 {
 }
 
 input {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid;
     height: 20px;
     width: 500px;
 }
