--- a/quinzena4/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena4/bugfixes/exercicio-bugfixes/index.css
@@ -85,6 +85,8 @@ div img {
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+    width: 240px;
+    margin: auto;
 }
 
 #container-para-comprar {
