--- a/resultados-loteria/resultados-loteria/src/index.css
+++ b/resultados-loteria/resultados-loteria/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+footer {
+  height: 10%;
+  background-color: rgb(128, 128, 128);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
