--- a/rodada-cases-bloco1/jogo-tarot/src/components/Card/styles.css
+++ b/rodada-cases-bloco1/jogo-tarot/src/components/Card/styles.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card_content {
+  position: relative;
+  width: 200px;
+}
